--- a/spot_clustering_Limit_Ranges.Rmd
+++ b/spot_clustering_Limit_Ranges.Rmd
@@ -18,8 +18,8 @@ library(plyr)
 
 # 0. Load data
 ```{r}
-#base = "C:/Users/pc/Desktop/UNIST_internship/Sample_Image/Positive/PB417_01/"
-base = "C:/Users/pc/Desktop/UNIST_internship/Sample_Image/Negative/2/"
+base = "C:/Users/user/Desktop/UNIST_internship/Sample_Image/Positive/PB417_01/"
+#base = "C:/Users/pc/Desktop/UNIST_internship/Sample_Image/Negative/2/"
 vis_path = paste0(base, "analysis_20221205/")
 
 #file = "Spot_matching_result_imputated.csv"
@@ -340,41 +340,41 @@ ggplot(df_meta_norm_int_dist, aes(x=variable, y=value, color=variable)) +
 
 ## 2-3. Calculate distance and determine cluster number
 ```{r}
-# Euclidean distance: observation with high values of features will be clustered together
-# Correlation based distance: Identify clusters of observation regardless of their magnitude
-distance = dist(df_meta_norm)
-df_meta.hclust = hclust(distance, method = "ward.D2")
-
-#pdf(file = paste0(vis_path, "dendrogram.pdf"), width = 10, height = 7)
-plot(df_meta.hclust,hang=-1, labels = FALSE, main='Hierarchical Cluster')
-#dev.off()
+# # Euclidean distance: observation with high values of features will be clustered together
+# # Correlation based distance: Identify clusters of observation regardless of their magnitude
+# distance = dist(df_meta_norm)
+# df_meta.hclust = hclust(distance, method = "ward.D2")
+# 
+# #pdf(file = paste0(vis_path, "dendrogram.pdf"), width = 10, height = 7)
+# plot(df_meta.hclust,hang=-1, labels = FALSE, main='Hierarchical Cluster')
+# #dev.off()
 ```
 
 ## 2-4. Determine the best number of clusters
 ```{r}
-sil_coef_vector <- c()
-for (num_cluster in 2:10){
-  print(paste0("computing cluster number ", num_cluster))
-  sil_cutree <- cutree(df_meta.hclust, k = num_cluster)
-  sil_cl <- silhouette(sil_cutree ,distance)
-  sil_cl_summary <- summary(sil_cl)
-  sil_coefficient <- as.vector(sil_cl_summary$si.summary["Mean"])
-  sil_coef_vector<- c(sil_coef_vector, sil_coefficient)
-}
-
-#pdf(file = paste0(vis_path, "silhouette coefficient.pdf"), width = 10, height = 7)
-plot(2:10,sil_coef_vector,"b", xlab="k", ylab="silhouette coefficient")
-#dev.off()
-
-#pdf(file = paste0(vis_path, "average_silhouette coefficient.pdf"), width = 10, height = 7)
-fviz_nbclust(df_meta_norm, kmeans, method = "silhouette")
-#dev.off()
+# sil_coef_vector <- c()
+# for (num_cluster in 2:10){
+#   print(paste0("computing cluster number ", num_cluster))
+#   sil_cutree <- cutree(df_meta.hclust, k = num_cluster)
+#   sil_cl <- silhouette(sil_cutree ,distance)
+#   sil_cl_summary <- summary(sil_cl)
+#   sil_coefficient <- as.vector(sil_cl_summary$si.summary["Mean"])
+#   sil_coef_vector<- c(sil_coef_vector, sil_coefficient)
+# }
+# 
+# #pdf(file = paste0(vis_path, "silhouette coefficient.pdf"), width = 10, height = 7)
+# plot(2:10,sil_coef_vector,"b", xlab="k", ylab="silhouette coefficient")
+# #dev.off()
+# 
+# #pdf(file = paste0(vis_path, "average_silhouette coefficient.pdf"), width = 10, height = 7)
+# fviz_nbclust(df_meta_norm, kmeans, method = "silhouette")
+# #dev.off()
 ```
 
 ## 2-5. Clustering
 ```{r}
 # K-means clustering
-n_cluster = 4
+n_cluster = 7
 k2 <- kmeans(df_meta_norm, centers = n_cluster, nstart = 25)  # centers = number of clusters
 str(k2)
 
@@ -401,16 +401,16 @@ df_match[,'cluster'] <- factor(k2$cluster)
 df_meta_norm[,'cluster'] <- factor(k2$cluster)
 ```
 
-```{r}
+```{r, warning = FALSE}
 library(GGally)
 #pdf(file = paste0(vis_path, "clusters_pairs.pdf"), width = 10, height = 10)
+
 if (intensity == "int"){
  ggpairs(df_meta_norm, columns=c("C1_sigma", "C2_sigma", "C3_sigma", "C4_sigma", "C1_int", "C2_int", "C3_int", "C4_int"), aes(colour=cluster, alpha = 0.5), lower=list(continuous='points'), axisLabels='none')#, upper=list(continuous='blank')) 
 } else if (intensity == "int_sig"){
   ggpairs(df_meta_norm, columns=c("C1_sigma", "C2_sigma", "C3_sigma", "C4_sigma", "C1_int_sig", "C2_int_sig", "C3_int_sig", "C4_int_sig"), aes(colour=cluster, alpha = 0.5), lower=list(continuous='points'), axisLabels='none')#, upper=list(continuous='blank'))
 }
 
-#ggpairs(df_match, columns=c("C1_int", "C2_int", "C3_int", "C4_int"), aes(colour=cluster, alpha = 0.5), lower=list(continuous='points'), axisLabels='none')#, upper=list(continuous='blank'))
 #dev.off()
 ```
 
@@ -500,8 +500,8 @@ for (c in 1:n_cluster){
   sigma <- df_match[which(df_match$cluster == c),c("C1_sigma", "C2_sigma", "C3_sigma", "C4_sigma")]
   int <- df_match[which(df_match$cluster == c), c("C1_int", "C2_int", "C3_int", "C4_int")]
   
-  mean_sigma <- apply(sigma, 2, mean)
-  mean_int <- apply(int, 2, mean)
+  mean_sigma <- apply(sigma, 2, mean, na.rm=TRUE)
+  mean_int <- apply(int, 2, mean, na.rm=TRUE)
   
   for (d in 1:4){
     mean_df[c, names(mean_sigma)[d]] <- mean_sigma[d]
